# assessor-fraud-risk-triage

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ASSESSOR_DEPLOYMENT.md  DATA_DICTIONARY.md  METHODOLOGY.md
examples/: cases.csv  entities.csv  instruments.csv
scripts/: build_crypto_escrow_correlation.py  build_newsdesk_report.py  build_property_value_crypto_correlation.py  build_title_repair_property_flag.py  markdown_to_simple_pdf.py
src/assessor_fraud_risk_triage/: __init__.py  cli.py  io.py  scoring.py
tests/: test_scoring.py
