[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "assessor-fraud-risk-triage"
version = "0.1.0"
description = "Explainable fraud-risk triage scoring for recorder and assessor data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Assessor Fraud Risk Triage contributors" }]
dependencies = []

[project.scripts]
assessor-fraud-risk-triage = "assessor_fraud_risk_triage.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

